--- a/Day 2/index.html
+++ b/Day 2/index.html
@@ -20,13 +20,13 @@
     <h2>Pow: <span id="pow"></span></h2>
     <h2>Sqrt: <span id="sqrt"></span></h2>
     <script>
-        document.getElementById('sum').textContent = ${sum(1, 2)};
-        document.getElementById('diff').textContent = ${diff(1, 2)};
-        document.getElementById('mul').textContent = ${mul(1, 2)};
-        document.getElementById('div').textContent = ${div(1, 2)};
-        document.getElementById('mod').textContent = ${mod(1, 2)};
-        document.getElementById('pow').textContent = ${pow(1, 2)};
-        document.getElementById('sqrt').textContent = ${sqrt(4)};
+        document.getElementById('sum').textContent = sum(1, 2);
+        document.getElementById('diff').textContent = diff(1, 2);
+        document.getElementById('mul').textContent = mul(1, 2);
+        document.getElementById('div').textContent = div(1, 2);
+        document.getElementById('mod').textContent = mod(1, 2);
+        document.getElementById('pow').textContent = pow(1, 2);
+        document.getElementById('sqrt').textContent = sqrt(4);
     </script>
-</body>
+
 </html>
